[gd_scene load_steps=27 format=3 uid="uid://bmmbe5mxlvgna"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_gx2ux"]
[ext_resource type="Texture2D" uid="uid://b3jp3xam0sdhp" path="res://Assets/Rocky Roads/Enemies/chicken.png" id="1_kk80b"]
[ext_resource type="Texture2D" uid="uid://dsv1dbh460jsm" path="res://Assets/Rocky Roads/FX/particle.png" id="3_3sqqp"]
[ext_resource type="AudioStream" uid="uid://c57ysvumqt5ki" path="res://Sounds/step_1.ogg" id="4_q866b"]
[ext_resource type="AudioStream" uid="uid://dihe6cv32n1yg" path="res://Sounds/step_2.ogg" id="5_ag01u"]
[ext_resource type="AudioStream" uid="uid://drtsqmaulnco2" path="res://Sounds/step_3.ogg" id="6_i6e36"]
[ext_resource type="AudioStream" uid="uid://csevipc0kloc6" path="res://Sounds/jump.ogg" id="7_kpq8s"]
[ext_resource type="AudioStream" uid="uid://dum1sxnpl4xam" path="res://Sounds/dash.ogg" id="7_rm5ch"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l55sc"]

[sub_resource type="Animation" id="Animation_3ynjw"]
resource_name = "Bend_left"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-8, 5.5, 4, 5.5, 4, -0.5, -8, -0.5)]
}

[sub_resource type="Animation" id="Animation_in0mm"]
resource_name = "Bend_right"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-5, 5.5, 8, 5.5, 8, -0.5, -5, -0.5)]
}

[sub_resource type="Animation" id="Animation_u7ukq"]
resource_name = "Left_Flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrontRaycast:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-8, 5.5, 3, 5.5, 6, 0.5, 6, -4.5, -8, -4.5)]
}

[sub_resource type="Animation" id="Animation_il0fn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrontRaycast:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-8, 5.5, 3, 5.5, 6, 0.5, 6, -4.5, -8, -4.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ykoml"]
resource_name = "Right_Flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrontRaycast:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-3, 5.5, 8, 5.5, 8, -4.5, -6, -4.5, -6, 1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nrsqq"]
_data = {
"Bend_left": SubResource("Animation_3ynjw"),
"Bend_right": SubResource("Animation_in0mm"),
"Left_Flip": SubResource("Animation_u7ukq"),
"RESET": SubResource("Animation_il0fn"),
"Right_Flip": SubResource("Animation_ykoml")
}

[sub_resource type="Animation" id="Animation_0rpec"]
resource_name = "Dead"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_joaek"]
resource_name = "Disappear"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"disappear"
}]
}

[sub_resource type="Animation" id="Animation_mvrfg"]
resource_name = "Fall"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_sxbqt"]
resource_name = "Idle"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ghbua"]
resource_name = "Jump"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"jump_sound"
}]
}

[sub_resource type="Animation" id="Animation_2oobq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrontRaycast:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:flip_v")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_kxvie"]
resource_name = "Walk"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8, 1.1, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 10, 11, 12]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 2.3),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"steps"
}, {
"args": [],
"method": &"steps"
}, {
"args": [],
"method": &"steps"
}]
}

[sub_resource type="Animation" id="Animation_3x0io"]
resource_name = "fliquer"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crlcb"]
_data = {
"Dead": SubResource("Animation_0rpec"),
"Disappear": SubResource("Animation_joaek"),
"Fall": SubResource("Animation_mvrfg"),
"Idle": SubResource("Animation_sxbqt"),
"Jump": SubResource("Animation_ghbua"),
"RESET": SubResource("Animation_2oobq"),
"Walk": SubResource("Animation_kxvie"),
"fliquer": SubResource("Animation_3x0io")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3u47s"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape_scale = Vector3(3, 3, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, 0, 0)
collision_mode = 2

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vkpks"]
lifetime_randomness = 0.6
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(6, 6, 1)
gravity = Vector3(0, 0, 0)

[node name="Player" type="CharacterBody2D" groups=["Camera_focus", "Player"]]
z_index = 3
collision_layer = 9
script = ExtResource("1_gx2ux")

[node name="Timerjump" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TimerSpeed" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="DashAnimationTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BounceTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Timerfliquer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="TimerDead" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_l55sc")
position = Vector2(0, -10)
texture = ExtResource("1_kk80b")
hframes = 7
vframes = 2

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, 0.5)
polygon = PackedVector2Array(-8, 5.5, 3, 5.5, 6, 0.5, 6, -4.5, -8, -4.5)

[node name="AnimationFlip" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nrsqq")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_crlcb")
}
speed_scale = 3.5

[node name="FrontRaycast" type="RayCast2D" parent="."]
position = Vector2(0, 5)
scale = Vector2(0.1, 0.1)
target_position = Vector2(-90, 8.47033e-21)

[node name="RaycastUp" type="Node2D" parent="."]

[node name="RayCast1" type="RayCast2D" parent="RaycastUp"]
position = Vector2(-8, -4)
rotation = -3.14159
scale = Vector2(0.1, 0.1)
target_position = Vector2(7.62939e-05, 30)
collision_mask = 2

[node name="RayCast2" type="RayCast2D" parent="RaycastUp"]
position = Vector2(8, -4)
rotation = 3.14159
scale = Vector2(0.1, 0.1)
target_position = Vector2(-7.62939e-05, 30)
collision_mask = 2

[node name="RayCast3" type="RayCast2D" parent="RaycastUp"]
position = Vector2(2.84217e-14, -4)
rotation = 3.14159
scale = Vector2(0.1, 0.1)
target_position = Vector2(-7.60554e-05, 30)
collision_mask = 2

[node name="Mini Particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_3u47s")
texture = ExtResource("3_3sqqp")
lifetime = 0.5
randomness = 0.58

[node name="Dash particles" type="GPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_vkpks")
texture = ExtResource("3_3sqqp")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.4

[node name="Sound step 1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_q866b")
bus = &"Game"

[node name="Sound step 2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ag01u")
bus = &"Game"

[node name="Sound step 3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_i6e36")
bus = &"Game"

[node name="Sound dash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_rm5ch")
volume_db = -7.0
pitch_scale = 1.18
attenuation = 0.5
bus = &"Game"

[node name="Sound Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_kpq8s")
volume_db = -5.0
pitch_scale = 1.32
attenuation = 0.267943
bus = &"Game"

[connection signal="timeout" from="Timerjump" to="." method="_on_timerjump_timeout"]
[connection signal="timeout" from="TimerSpeed" to="." method="_on_timer_speed_timeout"]
[connection signal="timeout" from="DashAnimationTimer" to="." method="_on_dash_animation_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="BounceTimer" to="." method="_on_bounce_timer_timeout"]
[connection signal="timeout" from="Timerfliquer" to="." method="_on_timerfliquer_timeout"]
[connection signal="timeout" from="TimerDead" to="." method="_on_timer_dead_timeout"]
